	* src/common/na-iio-provider.c:
	Write action now accepts a NULL NAPivot to deal with command-line
	utility.

	* src/common/na-xml-names.h:
	Define new FORMAT_GCONFSCHEMA format to create a schema.

	* src/nact/nact-gconf-keys.h:
	Renamed as src/common/na-xml-names.h.

	* src/nact/nact-gconf-writer.{c,h}:
	Renamed as src/common/na-xml-writer.{c,h}.
	Create a schema on FORMAT_GCONFSCHEMA format.

	* src/nact/nact-import-export-format.h: Removed file.

	* src/nact/nautilus-actions-config.ui:
	Renamed as src/nact/nautilus-actions-config-tool.ui.

	* src/utils/nautilus-actions-new-config.c:
	Renamed as src/utils/nautilus-actions-new.c.

	* src/utils/nautilus-actions-tools-utils.c:
	* src/utils/nautilus-actions-tools-utils.h: Removed files.

	* src/utils/nautilus-actions-schema.c: New file.

	* configure.ac:
	* src/common/Makefile.am:
	* src/nact/Makefile.am:
	* src/nact/nact-application.c:
	* src/nact/nact-assist-export.c:
	* src/nact/nact.desktop.in
	* src/utils/Makefile.am: Updated accordingly.

	* m4/na-log-domains.m4:
	Define a new log domain for utilities.

2009-07-27 Pierre Wieser <pwieser@trychlos.org>

	* m4/na-log-domains.m4: New file.

	* m4/nact-cmdline-tools.m4: Renamed to m4/na-cmdline-tools.m4.
	* m4/nact-compiler-flags.m4: Renamed to m4/na-compiler-flags.m4.
	* m4/nact-maintainer-mode.m4: Renamed to m4/na-maintainer-mode.m4.
	* m4/nact-nautilus-extdir.m4: Renamed to m4/na-nautilus-extdir.m4.

	* configure.ac: Updated accordingly.

	* src/common/na-object.c:
	* src/common/na-object.h (na_object_check_edited_status):
	New derivable function.

	* src/common/na-action.c:
	Implements check_edited_status for profiles.

	* src/common/na-utils.c:
	* src/common/na-utils.h (na_utils_path_to_key):
	New function moved from na-gconf.c.

	* src/nact/nact-window.c:
	* src/nact/nact-window.h
	(nact_window_set_current_action, nact_window_warn_action_modified,
	nact_window_warn_profile_modified): Removed functions.

	* src/nact/nact-gconf-reader.c: